disable back button with JS

--- a/pkg/static/displayProfile.html
+++ b/pkg/static/displayProfile.html
@@ -28,4 +28,7 @@
     <a href="/user/{{ .User.ID}}/edit">Edit</a>
     <a href="/logout/{{ .User.ID}}">Log out</a>
 </body>
+<footer>
+    <script src="/static/disableGoBack.js"></script>
+</footer>
 </html>
