--- a/pkg/static/editProfile.html
+++ b/pkg/static/editProfile.html
@@ -19,4 +19,7 @@
     </form>
     <a href="/user/{{ .User.ID}}"> Cancel </a>
 </body>
+<footer>
+    <script src="/static/disableGoBack.js"></script>
+</footer>
 </html>
