--- a/pkg/static/forgotPassword.html
+++ b/pkg/static/forgotPassword.html
@@ -13,4 +13,7 @@
     </form>
     <a href="/login">Back to Log in</a>
 </body>
+<footer>
+    <script src="/static/disableGoBack.js"></script>
+</footer>
 </html>
