--- a/pkg/static/login.html
+++ b/pkg/static/login.html
@@ -12,4 +12,7 @@
     <a href="/signup">Sign up</a><br/>
     <a href="/password/forgot">Forgot password?</a><br/>
 </body>
+<footer>
+    <script src="/static/disableGoBack.js"></script>
+</footer>
 </html>
