--- a/pkg/static/signup.html
+++ b/pkg/static/signup.html
@@ -11,4 +11,7 @@
     <a href="/login">Existing user? Log in</a><br/>
     <a href="/login/google">Sign up with Google</a>
 </body>
+<footer>
+    <script src="/static/disableGoBack.js"></script>
+</footer>
 </html>
